crates/oxc_linter/src/snapshots/no_unused_vars@oxc-vars-catch.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint(no-unused-vars): Variable 'e' is caught but never used.
   ╭─[no_unused_vars.tsx:1:15]
 1 │ try {} catch (e) { }
   ·               ┬
   ·               ╰── 'e' is declared here
   ╰────
  help: Consider handling this error.
