crates/oxc_linter/src/snapshots/no_unused_vars@oxc-vars-discarded-read.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-unused-vars): Parameter 'a' is declared but never used. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:2:22]
 1 │ 
 2 │         function foo(a) { return (a, 0); }
   ·                      ┬
   ·                      ╰── 'a' is declared here
 3 │         foo(1);
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Variable 'I' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:2:15]
 1 │ 
 2 │         const I = (e) => (l) => {
   ·               ┬
   ·               ╰── 'I' is declared here
 3 │             e.push(l), n || false;
   ╰────
  help: Consider removing this declaration.
