crates/oxc_linter/src/snapshots/no_unused_vars@oxc-vars-reassignment.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 1; a ||= 2;
   ·     ┬      ┬
   ·     │      ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; a = a + 1;
   ·     ┬      ┬
   ·     │      ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; a = a++ as any;
   ·     ┬          ┬
   ·     │          ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; a = a as unknown as string as unknown as number;
   ·     ┬      ┬
   ·     │      ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; a = ++a;
   ·     ┬            ┬
   ·     │            ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; a = (0, ++a);
   ·     ┬                ┬
   ·     │                ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; a = (a++, 0);
   ·     ┬           ┬
   ·     │           ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; let b = (a++, 0); f(b);
   ·     ┬               ┬
   ·     │               ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; let b = (0, (a++, 0)); f(b);
   ·     ┬                   ┬
   ·     │                   ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; let b = ((0, a++), 0); f(b);
   ·     ┬                   ┬
   ·     │                   ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable 'a' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 0; let b = (a, 0) + 1; f(b);
   ·     ┬
   ·     ╰── 'a' is declared here
   ╰────
  help: Consider removing this declaration.
