crates/oxc_linter/src/snapshots/no_unused_vars@oxc-vars-simple.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-unused-vars): Variable 'a' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 1
   ·     ┬
   ·     ╰── 'a' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Variable 'a' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a: number = 1
   ·     ┬
   ·     ╰── 'a' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 1; a = 2
   ·     ┬      ┬
   ·     │      ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?

  ⚠ eslint(no-unused-vars): Variable '_a' is marked as ignored but is used.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let _a = 1; console.log(_a)
   ·     ─┬
   ·      ╰── '_a' is declared here
   ╰────
  help: Consider renaming this variable to 'a'.

  ⚠ eslint(no-unused-vars): Variable 'fooBar' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:14]
 1 │ const { foo: fooBar, baz } = obj; f(baz);
   ·              ───┬──
   ·                 ╰── 'fooBar' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Variable '_a' is declared but never used.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let _a = 1
   ·     ─┬
   ·      ╰── '_a' is declared here
   ╰────
  help: Consider removing this declaration.
