crates/oxc_linter/src/snapshots/no_unused_vars@oxc-vars-using.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-unused-vars): Variable 'a' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:7]
 1 │ using a = 1;
   ·       ┬
   ·       ╰── 'a' is declared here
   ╰────
  help: Consider removing this declaration.
