crates/oxc_linter/src/snapshots/no_unused_vars@oxc_simple_variables.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint(no-unused-vars): Variable 'a' is declared but never used.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 1
   ·     ┬
   ·     ╰── 'a' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Variable 'a' is assigned a value but never used.
   ╭─[no_unused_vars.tsx:1:5]
 1 │ let a = 1; a = 2
   ·     ┬      ┬
   ·     │      ╰── it was last assigned here
   ·     ╰── 'a' is declared here
   ╰────
  help: Did you mean to use this variable?
