crates/oxc_linter/src/snapshots/no_unused_vars@typescript-eslint-tsx.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-unused-vars): Identifier 'Fragment' is imported but never used.
   ╭─[no_unused_vars.tsx:3:18]
 2 │         import React from 'react';
 3 │         import { Fragment } from 'react';
   ·                  ────┬───
   ·                      ╰── 'Fragment' is imported here
 4 │ 
   ╰────
  help: Consider removing this import.
